# Hacksphere_DPU_Hackathon

./: .env.example  .gitignore  GOOGLE_OAUTH_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MONGODB_ATLAS_USERS_SETUP.md  MONGODB_IP_RESTRICTION_GUIDE.md  NAVIGATION_UPDATE_SUMMARY.md  ORB_VOICE_AND_LLM_GUIDE.md  QUICK_START.md  RENDER_ENV_VARS.md  SCRIPTS_UPDATE_GUIDE.md  STRUCTURED_LOGGING.md  ai-db-queries.json  check-collections.js  check-env-variables.js  cleanup-duplicate-collections.js  db-test.js  db.js  ensure-collections.js  farmer-llm-prompt.js  farmer-training-data.json  final-test-results.json  final-verification.js  fix-mongodb-connection.js  get-voices.js  insert-samples.js  logger.js  minimal-test.js  mistral-api.js  mistral_service.py  remove-duplicate-collection.js  show-indexes.js  show-queries.js  show-samples.js  simple-test.js  test-ai-interaction.js  test-api-endpoint.js  test-crop-detection.js  test-results-detailed.json  test-results.json  (+3 more)
KrushiMitra-Backend/: .env.example  .gitignore  API_CONTRACT.md  FIXES_COMPLETED.md  FIX_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY.md  LOGGING_EXAMPLE.md  MONGODB_FIX_GUIDE.md  README.md  (+34 more)
crop-disease-backend/: CLIENT_INTEGRATION.md  Dockerfile  Dockerfile.hf  README.md  main.py  minimal_test.py  pyproject.toml  render.yaml  requirements.txt  space_config.json  standalone_test.py  test_api.py  test_compatibility.py
crop-disease-backend/src/inference/: pipeline.py
crop-disease-backend/src/models/: model_manager.py  model_manager.py.bak2
crop-disease-backend/src/utils/: cpu_optimizer.py  logger.py  validators.py
(+12 files in other folders)
